tests/semantic/invalid/07_bool_arithmetic.src
fn main() -> int {
    int x = 5 + true;
    return x;
}
